reports/BB_chapter8.err.log
Traceback (most recent call last):
  File "D:\users\anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 64, in single_nb_execution
    **kwargs,
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "D:\users\anaconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "D:\users\anaconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "D:\users\anaconda3\lib\asyncio\base_events.py", line 579, in run_until_complete
    return future.result()
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
menulist=['í–„ì—ê·¸','BLT','ì¹˜í‚¨ìƒëŸ¬ë“œ','ë¦¬ì½”íƒ€ì¹˜ì¦ˆ','ëŸ°ì¹˜ìƒŒë“œìœ„ì¹˜', 'ë¯¸ë‹ˆë²„ê±°']

# ì „ì²´ ë©”ë‰´ë¥¼ ë³´ì—¬ì£¼ëŠ” í•¨ìˆ˜
def menu():
  print('='*70)
  print(menulist)
  print('='*70)

# ì£¼ë¬¸í•œ ë©”ë‰´ë¥¼ ì¶œë ¥í•´ì£¼ëŠ” í•¨ìˆ˜
# order_msg() í•¨ìˆ˜ ì •ì˜
def


menu()
inputOrder = input('ë©”ë‰´ë¥¼ ì„ íƒí•´ì£¼ì„¸ìš”: ')

order_msg() #í•¨ìˆ˜ í˜¸ì¶œ

------------------

[1;36m  File [1;32m"<ipython-input-11-4912190c0013>"[1;36m, line [1;32m11[0m
[1;33m    def[0m
[1;37m       ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-11-4912190c0013>, line 11)

